--- a/views/vmMem.ejs
+++ b/views/vmMem.ejs
@@ -17,8 +17,8 @@
 </head>
   
 <body>
-    <h1>Overall VM memory</h1>
-    <button type="button" class="btn btn-primary" data-loading-text="back to main "  onClick="window.location='/'" style="position: absolute;top: 23px;left: 300px;">Back to main</button>
+    <h1>Overall VM Memory</h1>
+    <button type="button" class="btn btn-primary" data-loading-text="back to main "  onClick="window.location='/'" style="position: absolute;top: 23px;left: 350px;">Back to main</button>
 
     <% for (var i=0;i<vms.length;i++)
 {%>
