--- a/views/vmNet.ejs
+++ b/views/vmNet.ejs
@@ -44,7 +44,7 @@ $(function () {
         yAxis: {
             min: 0,
             title: {
-                text: 'Network precentage'
+                text: 'kiloBytesPerSecond'
             }
         },
         tooltip: {
