--- a/views/status.ejs
+++ b/views/status.ejs
@@ -29,8 +29,32 @@
 
         <%}
         %>
+        <div style="position:absolute; left:400px;top:50px">
+            <button type="button" class="btn btn-primary" data-loading-text="back to main "  onClick="window.location='/allVMCpu'" style="position: absolute;margin-left:-100px;">All Vm Cpu Status</button>
+
+             <button type="button" class="btn btn-primary" data-loading-text="back to main "  onClick="window.location='/allVMMem'" style="position: absolute;margin-left:50px;">All Vm Memory Status</button>
+        
+             <button type="button" class="btn btn-primary" data-loading-text="back to main "  onClick="window.location='/allVMNet'" style="position: absolute;margin-left:-100px;margin-top:50px;">All Vm Network Status</button>
+
+            <button type="button" class="btn btn-primary" data-loading-text="back to main "  onClick="window.location='/allVMIO'" style="position: absolute;margin-left:80px;margin-top:50px;">All Vm IO Status</button>
+             
+            </div>
+
+             <div style="position:absolute; left:1200px;top:50px">
+            <button type="button" class="btn btn-primary" data-loading-text="back to main "  onClick="window.location='/allVhCpu'" style="position: absolute;margin-left:-100px;">All Vhost Cpu Status</button>
+
+             <button type="button" class="btn btn-primary" data-loading-text="back to main "  onClick="window.location='/allVhMem'" style="position: absolute;margin-left:70px;">All Vhost Memory Status</button>
+        
+             <button type="button" class="btn btn-primary" data-loading-text="back to main "  onClick="window.location='/allVhNet'" style="position: absolute;margin-left:-100px;margin-top:50px;">All Vhost Network Status</button>
+
+            <button type="button" class="btn btn-primary" data-loading-text="back to main "  onClick="window.location='/allVhIO'" style="position: absolute;margin-left:100px;margin-top:50px;">All Vhost IO Status</button>
+             
+            </div>
+            
+
         <div class="dropdown" >
-  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true" style :"position:absolute ">
+            
+  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true" style :"position:absolute">
    Select VM to view
     <span class="caret"></span>
   </button>
@@ -46,8 +70,8 @@
 </div>    
   <div class="dropdown"  style="
     position: absolute;
-    top: 109px;
-    left: 155px;
+    top: 106px;
+    left: 850px;
 ">
  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
    Select Vhost to view
@@ -84,7 +108,7 @@
         },
         yAxis: {
             title: {
-                text: 'value(%)'
+                text: 'value(%) '
             }
         },
         legend: {
@@ -143,7 +167,7 @@
         },
         yAxis: {
             title: {
-                text: 'value(%)'
+                text: 'percent (%)'
             }
         },
         legend: {
@@ -202,7 +226,7 @@
         },
         yAxis: {
             title: {
-                text: 'value(%)'
+                text: 'kiloBytesPerSecond '
             }
         },
         legend: {
@@ -241,10 +265,72 @@
     });
 });
 </script>
+<script type="text/javascript">
+  $(function () {
+    $('#io_container').highcharts({
+        chart: {
+            zoomType: 'x'
+        },
+        title: {
+            text: 'IO Usage Chart'
+        },
+        subtitle: {
+            text: document.ontouchstart === undefined ?
+                    'Click and drag in the plot area to zoom in' :
+                    'Pinch the chart to zoom in'
+        },
+        xAxis: {
+            type: 'datetime',
+            minRange: 30*60*1000 
+        },
+        yAxis: {
+            title: {
+                text: 'MB'
+            }
+        },
+        legend: {
+            enabled: false
+        },
+        plotOptions: {
+            area: {
+                fillColor: {
+                    linearGradient: { x1: 0, y1: 0, x2: 0, y2: 1},
+                    stops: [
+                       [0, Highcharts.getOptions().colors[2]],
+                        [1, Highcharts.Color(Highcharts.getOptions().colors[0]).setOpacity(0).get('rgba')]
+                    ]
+                },
+                marker: {
+                    radius: 2
+                },
+                lineWidth: 1,
+                states: {
+                    hover: {
+                        lineWidth: 1
+                    }
+                },
+                threshold: null
+            }
+        },
+
+        series: [{
+            type: 'area',
+            name: 'IO Usage',
+            pointInterval: 5*60*1000,
+            pointStart: Date.UTC(20014, 10, 22),
+            data: [<%=ios%>         
+            ]
+        }]
+    });
+});
+</script>
+</script>
 		<div id="CPU_container" style="width: 800px; height: 200px" ></div>
         <br>
 		<div id="mem_container" style="width: 800px; height: 200px" ></div>
         <br>
-		<div id="net_container" style="width: 800px; height: 200px" ></div>
+		<div id="net_container" style="position:absolute; left:850px;top:142px;width: 800px; height: 200px" ></div>
+        <br>
+        <div id="io_container" style="position:absolute; left:850px;top:362px;width: 800px; height: 200px" ></div>
   </body>
 </html>
