--- a/views/vmCPU.ejs
+++ b/views/vmCPU.ejs
@@ -18,7 +18,8 @@
   
 <body>
 
-    <h1>Overall VM Network</h1>
+    <h1>Overall VM CPU</h1>
+    <a href="allVMCpuH">VM Cpu Hourly</a>
     <button type="button" class="btn btn-primary" data-loading-text="back to main "  onClick="window.location='/'" style="position: absolute;top: 23px;left: 350px;">Back to main</button>
 
     <% for (var i=0;i<vms.length;i++)
@@ -28,7 +29,7 @@
 
 
 $(function () {
-    $('#<%=vms[i]%>').highcharts({
+    $('#<%=i%>').highcharts({
         chart: {
             type: 'column'
         },
@@ -66,7 +67,7 @@ $(function () {
             type: 'area',
             name: 'Cpu Usage',
             pointInterval: 5*60*1000,
-            pointStart: Date.UTC(20014, 10, 22),
+            pointStart: Date.UTC(20014, 11,22,22,54),
             data: [<%=h[vms[i]]%>]
 
         }]
@@ -76,13 +77,13 @@ $(function () {
 <% if(i<3)
 
 {%>
-<div id='<%=vms[i]%>' style="width: 640px; height: 245px; position: absolute;left: 80px ;top:<%=i*280+60%>px;"></div>
+<div id='<%=i%>' style="width: 640px; height: 245px; position: absolute;left: 80px ;top:<%=i*280+100%>px;"></div>
 <br>
   <%}
 else 
     {%>
     
-<div id='<%=vms[i]%>' style="width: 640px; height: 245px; margin: 2 ;position: absolute;left: 820px;top:<%=i*280-780%>px;"></div>
+<div id='<%=i%>' style="width: 640px; height: 245px; margin: 2 ;position: absolute;left: 820px;top:<%=i*280-780%>px;"></div>
 <%}
 %>
       <%}
