--- a/views/vhCpu.ejs
+++ b/views/vhCpu.ejs
@@ -18,6 +18,7 @@
   
 <body>
     <h1>Overall VH CPU</h1>
+    <a href="/allVhCpuH">Hourly VhCPU</a>
    <button type="button" class="btn btn-primary" data-loading-text="back to main "   onClick="window.location='/'" style="position: absolute;top: 23px;left: 300px;">Back to main</button>
     <% for (var i=0;i<vms.length;i++)
 {%>
@@ -64,7 +65,7 @@ $(function () {
             type: 'area',
             name: 'CPU Usage',
             pointInterval: 5*60*1000,
-            pointStart: Date.UTC(20014, 10, 22),
+            pointStart: Date.UTC(20014, 11,22,22,54),
             data: [<%=h[vms[i]]%>]
 
         }]
@@ -74,7 +75,7 @@ $(function () {
 <% if(i<2)
 
 {%>
-<div id='<%=i%>' style="width: 700px; height: 245px; position: absolute;left: 80px ;top:<%=i*280+80%>px;"></div>
+<div id='<%=i%>' style="width: 700px; height: 245px; position: absolute;left: 80px ;top:<%=i*280+100%>px;"></div>
 <br>
   <%}
 else 
