--- a/views/vmCPUh.ejs
+++ b/views/vmCPUh.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-     <script src='http://getbootstrap.com/2.3.2/assets/css/bootstrap.css'></script>
+    <script src='http://getbootstrap.com/2.3.2/assets/css/bootstrap.css'></script>
    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
     <script src="http://code.highcharts.com/highcharts.js"></script>
 <script src="http://code.highcharts.com/modules/exporting.js"></script>
@@ -17,9 +17,10 @@
 </head>
   
 <body>
-    <h1>Overall VH Memory</h1>
-    <a href="allVhMemH">Vh memory hourly</a>
-       <button type="button" class="btn btn-primary" data-loading-text="back to main "  onClick="window.location='/'" style="position: absolute;top: 23px;left: 330px;">Back to main</button>
+
+    <h1>Overall VM CPU Hourly</h1>
+    <a href="allVMCpu">5 mins VM Cpu </a>
+    <button type="button" class="btn btn-primary" data-loading-text="back to main "  onClick="window.location='/'" style="position: absolute;top: 23px;left: 430px;">Back to main</button>
 
     <% for (var i=0;i<vms.length;i++)
 {%>
@@ -36,7 +37,7 @@ $(function () {
             text: '<%=vms[i]%>'
         },
         subtitle: {
-            text: 'VH Memory '
+            text: 'VM Cpu Hourly'
         },
         xAxis: {
            type: 'datetime',
@@ -45,7 +46,7 @@ $(function () {
         yAxis: {
             min: 0,
             title: {
-                text: 'Memory precentage'
+                text: 'Cpu precentage'
             }
         },
         tooltip: {
@@ -64,25 +65,25 @@ $(function () {
         },
         series: [{
             type: 'area',
-            name: 'Memory Usage',
+            name: 'Cpu Usage',
             pointInterval: 5*60*1000,
             pointStart: Date.UTC(20014, 11,22,22,54),
-            data: [<%=h[vms[i]]%>]
+            data: [<%=h2[vms[i]]%>]
 
         }]
     });
 });
  </script>
-<% if(i<2)
+<% if(i<3)
 
 {%>
-<div id='<%=i%>' style="width: 700px; height: 245px; position: absolute;left: 80px ;top:<%=i*280+100%>px;"></div>
+<div id='<%=i%>' style="width: 640px; height: 245px; position: absolute;left: 80px ;top:<%=i*280+100%>px;"></div>
 <br>
   <%}
 else 
     {%>
     
-<div id='<%=i%>' style="width: 700px; height: 245px; margin: 2 ;position: absolute;left: 820px;top:<%=i*280-480%>px;"></div>
+<div id='<%=i%>' style="width: 640px; height: 245px; margin: 2 ;position: absolute;left: 820px;top:<%=i*280-780%>px;"></div>
 <%}
 %>
       <%}
