--- a/views/vhIrh.ejs
+++ b/views/vhIrh.ejs
@@ -17,7 +17,7 @@
 </head>
   
 <body>
-    <h1>Overall VM I/O read Horuly</h1>
+    <h1>Overall Vh I/O read Horuly</h1>
     <a href="allvhir">5 mins Vh I/O read</a>
     <button type="button" class="btn btn-primary" data-loading-text="back to main "  onClick="window.location='/'" style="position: absolute;top: 23px;left: 450px;">Back to main</button>
 
@@ -66,7 +66,7 @@ $(function () {
             type: 'area',
             name: 'I/O read Usage',
             pointInterval: 5*60*1000,
-            pointStart: Date.UTC(20014, 11,22,22,54),
+            pointStart: Date.UTC(20014, 11,06,22,54),
             data: [<%=h2[vms[i]]%>]
 
         }]
