--- a/views/statusH.ejs
+++ b/views/statusH.ejs
@@ -19,14 +19,14 @@
     <%if(vmName==undefined)
         {%>
      <h2>Please select vm to show status<h2>   
-        <a href="/status/">5mins status</a>
+        <a href="/status/">alltime status</a>
         <br>
         <%}
 
         else{%>
 
         <h2><%=vmName%></h2>
-         <a href="/status/">5mins status</a>
+         <a href="/status/">alltime status</a>
         <h3>Type:<%=type%></h3>
 
         <%}
@@ -141,8 +141,8 @@
         series: [{
             type: 'area',
             name: 'CPU Usage',
-            pointInterval: 5*60*1000,
-            pointStart: Date.UTC(20014, 11,06,22,54),
+            pointInterval: 3600*60*1000,
+            pointStart: Date.UTC(20014, 11,06,22,54,0),
             data: [<%=cpu%>         
             ]
         }]
@@ -200,8 +200,8 @@
         series: [{
             type: 'area',
             name: 'Memory Usage',
-            pointInterval: 5*60*1000,
-            pointStart: Date.UTC(20014, 11,06,22,54),
+            pointInterval: 3600*60*1000,
+            pointStart: Date.UTC(20014, 11,06,22,54,0),
             data: [<%=mem%>         
             ]
         }]
@@ -259,8 +259,8 @@
         series: [{
             type: 'area',
             name: 'Memory Usage',
-            pointInterval: 5*60*1000,
-            pointStart: Date.UTC(20014, 11,06,22,54),
+            pointInterval: 3600*60*1000,
+            pointStart: Date.UTC(20014, 11,06,22,54,0),
             data: [<%=net%>         
             ]
         }]
@@ -318,8 +318,8 @@
         series: [{
             type: 'area',
             name: 'IO read Usage',
-            pointInterval: 5*60*1000,
-            pointStart: Date.UTC(20014, 11,06,22,54),
+            pointInterval: 3600*60*1000,
+            pointStart: Date.UTC(20014, 11,06,22,54,0),
             data: [<%=read%>         
             ]
         }]
@@ -377,7 +377,7 @@
         series: [{
             type: 'area',
             name: 'IO write Usage',
-            pointInterval: 5*60*1000,
+            pointInterval: 3600*60*1000,
             pointStart: Date.UTC(20014, 11,06,22,54),
             data: [<%=write%>         
             ]
