--- a/views/vhCpu.ejs
+++ b/views/vhCpu.ejs
@@ -64,8 +64,8 @@ $(function () {
         series: [{
             type: 'area',
             name: 'CPU Usage',
-            pointInterval: 5*60*1000,
-            pointStart: Date.UTC(20014, 11,06,22,54),
+            pointInterval: 5*1000,
+            pointStart: Date.UTC(20014, 11,06,22,54,0),
             data: [<%=h[vms[i]]%>]
 
         }]
