--- a/views/vhMemh.ejs
+++ b/views/vhMemh.ejs
@@ -18,7 +18,7 @@
   
 <body>
     <h1>Overall VH Memory Hourly</h1>
-    <a href="/allvhMem">5 mins Vh Memory</a>
+    <a href="/allvhMem">alltime Vh Memory</a>
        <button type="button" class="btn btn-primary" data-loading-text="back to main "  onClick="window.location='/'" style="position: absolute;top: 23px;left: 460px;">Back to main</button>
 
     <% for (var i=0;i<vms.length;i++)
@@ -65,8 +65,8 @@ $(function () {
         series: [{
             type: 'area',
             name: 'Memory Usage Hourly',
-            pointInterval: 5*60*1000,
-            pointStart: Date.UTC(20014, 11,06,22,54),
+            pointInterval: 3600*60*1000,
+            pointStart: Date.UTC(20014, 11,06,22,54,0),
             data: [<%=h2[vms[i]]%>]
 
         }]
