--- a/views/vhNeth.ejs
+++ b/views/vhNeth.ejs
@@ -18,7 +18,7 @@
   
 <body>
     <h1>Overall VH Network Hourly</h1>
-    <a href="allVhNet">5 mins Vh Network</a>
+    <a href="allVhNet">alltime Vh Network</a>
     <button type="button" class="btn btn-primary" data-loading-text="back to main " onClick="window.location='/'"style="position: absolute;top: 23px;left: 460px;">Back to main</button>
 
     <% for (var i=0;i<vms.length;i++)
@@ -65,8 +65,8 @@ $(function () {
         series: [{
             type: 'area',
             name: 'Network Usage',
-            pointInterval: 5*60*1000,
-            pointStart: Date.UTC(20014, 11,06,22,54),
+            pointInterval: 3600*60*1000,
+            pointStart: Date.UTC(20014, 11,06,22,54,0),
             data: [<%=h2[vms[i]]%>]
 
         }]
