--- a/views/vhiw.ejs
+++ b/views/vhiw.ejs
@@ -18,6 +18,7 @@
   
 <body>
     <h1>Overall VHost I/O write</h1>
+    <a href="allVhiwH">Vh I/O read Hourly</a>
     <button type="button" class="btn btn-primary" data-loading-text="back to main "  onClick="window.location='/'" style="position: absolute;top: 23px;left: 400px;">Back to main</button>
 
     <% for (var i=0;i<vms.length;i++)
@@ -64,8 +65,8 @@ $(function () {
         series: [{
             type: 'area',
             name: 'I/O write Usage',
-            pointInterval: 5*60*1000,
-            pointStart: Date.UTC(20014, 11,06,22,54),
+            pointInterval: 5*1000,
+            pointStart: Date.UTC(20014, 11,06,22,54,0),
             data: [<%=h[vms[i]]%>]
 
         }]
@@ -75,7 +76,7 @@ $(function () {
 <% if(i<3)
 
 {%>
-<div id='<%=[i]%>' style="width: 640px; height: 245px; position: absolute;left: 80px ;top:<%=i*280+60%>px;"></div>
+<div id='<%=[i]%>' style="width: 640px; height: 245px; position: absolute;left: 120px ;top:<%=i*280+60%>px;"></div>
 <br>
   <%}
 else 
