--- a/views/vmCPU.ejs
+++ b/views/vmCPU.ejs
@@ -66,8 +66,8 @@ $(function () {
         series: [{
             type: 'area',
             name: 'Cpu Usage',
-            pointInterval: 5*60*1000,
-            pointStart: Date.UTC(20014, 11,06,22,54),
+            pointInterval: 5*1000,
+            pointStart: Date.UTC(20014, 11,06,22,54,0),
             data: [<%=h[vms[i]]%>]
 
         }]
