--- a/views/vmCPUh.ejs
+++ b/views/vmCPUh.ejs
@@ -19,7 +19,7 @@
 <body>
 
     <h1>Overall VM CPU Hourly</h1>
-    <a href="allVMCpu">5 mins VM Cpu </a>
+    <a href="allVMCpu">alltime VM Cpu </a>
     <button type="button" class="btn btn-primary" data-loading-text="back to main "  onClick="window.location='/'" style="position: absolute;top: 23px;left: 430px;">Back to main</button>
 
     <% for (var i=0;i<vms.length;i++)
@@ -66,8 +66,8 @@ $(function () {
         series: [{
             type: 'area',
             name: 'Cpu Usage',
-            pointInterval: 5*60*1000,
-            pointStart: Date.UTC(20014, 11,06,22,54),
+            pointInterval: 3600*60*1000,
+            pointStart: Date.UTC(20014, 11,06,22,54,0),
             data: [<%=h2[vms[i]]%>]
 
         }]
