--- a/views/vmir.ejs
+++ b/views/vmir.ejs
@@ -65,8 +65,8 @@ $(function () {
         series: [{
             type: 'area',
             name: 'I/O read Usage',
-            pointInterval: 5*60*1000,
-            pointStart: Date.UTC(20014, 11,06,22,54),
+            pointInterval: 5*1000,
+            pointStart: Date.UTC(20014, 11,06,22,54,0),
             data: [<%=h[vms[i]]%>]
 
         }]
